--- a/NfcNDEFReader/res/layout/activity_main.xml
+++ b/NfcNDEFReader/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="fr.oversimple.nfc.urlReader.MainActivity$PlaceholderFragment" >
+    tools:context="fr.oversimple.nfc.ndefReader.MainActivity$PlaceholderFragment" >
 
     <TextView
         android:id="@+id/demoTextview"
